--- a/src/components/Game/game.css
+++ b/src/components/Game/game.css
@@ -29,6 +29,7 @@
 .game .map .dot {
     position: absolute;
     transform: translate(-50%, -50%);
+    background: #fff;
 }
 
 .game .map .circle {
