--- a/src/components/Players/players.css
+++ b/src/components/Players/players.css
@@ -1,32 +1,64 @@
 .add-player {
     position: fixed;
-    top: 60px;
+    top: 40px;
     right: 20px;
+    width: 240px;
+}
+
+.add-player .field {
+    margin-bottom: 8px;
 }
 
 .available {
     position: fixed;
-    top: 200px;
+    top: 280px;
     right: 20px;
-    width: 200px;
+    width: 240px;
+}
+
+.available .list {
+    margin-bottom: 10px;
+}
+
+.available .num-item {
+    display: inline-block;
+    width: 40px;
+}
+
+.available .list-in {
+    color: #2EB873;
+}
+
+.available .list-out {
+    color: #FF6633;
 }
 
 .player-list {
-    margin: 20px;
+    width: 800px;
+}
+
+.player-list .filter {
+    width: 300px;
+    margin-bottom: 12px;
 }
 
 .player-list table {
     border-spacing: 0;
+    width: 100%;
+}
+
+.player-list table th {
+    background: #f2f3f4;
 }
 
 .player-list table th,
 .player-list table td {
-    padding: 8px 16px;
-    border-bottom: 1px solid #888;
+    padding: 12px 16px;
+    border-bottom: 1px solid #d2d3df;
 }
 
 .player-list td.numbers {
-    max-width: 500px;
+
 }
 
 .player-list td.numbers a {
@@ -41,4 +73,37 @@
 
 .player-list td.numbers .outside a {
     color: #ed9877;
+}
+
+.change-number-modal .selected {
+    font-weight: bold;
+}
+
+.change-number-modal .numbers {
+    margin-top: 10px;
+}
+
+.change-number-modal .list {
+    margin-top: 10px;
+}
+
+.change-number-modal .numbers .list > span {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    margin-right: 4px;
+    margin-bottom: 4px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 50%;
+    color: #fff;
+    cursor: pointer;
+}
+
+.change-number-modal .numbers-in .list > span {
+    background: #2EB873;
+}
+
+.change-number-modal .numbers-out .list > span {
+    background: #FF6633;
 }
