--- a/src/components/Game/game.css
+++ b/src/components/Game/game.css
@@ -73,7 +73,9 @@
 .game .map .dot {
     position: absolute;
     display: inline-block;
-    transform: translate(-50%, -100%);
+    width: 48px;
+    height: 48px;
+    transform: translate(-4px, -44px);
 }
 
 .game .map .dot.hide {
@@ -85,24 +87,24 @@
 }
 
 .game .map .dot.hold {
-    width: 37px;
-    height: 47px;
     color: #fff;
     font-weight: bold;
     font-size: 20px;
-    background: url("./dot.png") no-repeat center;
+    background: url("./flag_red.svg") no-repeat center;
+    background-size: contain;
     text-align: center;
-    padding-top: 2px;
+    padding-top: 3px;
 }
 
 .game .map .dot.hold.exit {
     font-weight: normal;
-    color: #b5b6b7 !important;
+    background-image: url("./flag_grey.svg");
+    color: #424242;
 }
 
 .game .map .circle {
     position: absolute;
-    background: rgba(20, 255, 90, 0.2);
+    background: rgba(80, 255, 80, 0.4);
     border-radius: 50%;
     opacity: .6;
 }
@@ -110,7 +112,7 @@
 .game .map .circle > .radar {
     content: ' ';
     display: block;
-    background-image: linear-gradient(45deg, rgba(0, 255, 51, 0) 50%, #16cc55 100%);
+    background-image: linear-gradient(45deg, rgba(0, 0, 0, 0) 50%, #fff 100%);
     width: 50%;
     height: 50%;
     position: absolute;
@@ -120,6 +122,12 @@
     animation-timing-function: linear;
     transform-origin: bottom right;
     border-radius: 100% 0 0 0;
+}
+
+.game .map .prev-circle {
+    position: absolute;
+    border-radius: 50%;
+    border: 1px solid #ffff99;
 }
 
 @keyframes rotate {
